--- a/index.html
+++ b/index.html
@@ -610,9 +610,15 @@
                         <button
                             class="form-modal-inner-form__submit-button"
                             type="submit"
-                            data-lang="form-modal-inner-form__submit-button"
                         >
-                            Wysłać
+                            <span
+                                data-lang="form-modal-inner-form__submit-button"
+                                class="form-modal-inner-form__submit-button-text"
+                                >Wysłać</span
+                            >
+                            <span
+                                class="form-modal-inner-form__submit-button-loader"
+                            ></span>
                         </button>
                     </form>
 
