--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +21,7 @@
             <div class="header-container">
                 <a href="" class="header-logo">
                     <img
-                        src="images/shorticon.ico"
+                        src="/images/shorticon.ico"
                         alt="logo"
                         class="header-logo__image"
                     />
@@ -73,21 +73,21 @@
                     </button>
                     <div class="header-language__items">
                         <a
-                            href="index.html"
+                            href="/index.html"
                             class="header-language__item"
                             data-btn="pl"
                         >
                             PL
                         </a>
                         <a
-                            href="en/"
+                            href="/en/"
                             class="header-language__item"
                             data-btn="en"
                         >
                             EN
                         </a>
                         <a
-                            href="ua/"
+                            href="/ua/"
                             class="header-language__item"
                             data-btn="ua"
                         >
@@ -138,15 +138,19 @@
                     </svg>
                 </button>
                 <div class="header-language__items">
-                    <button class="header-language__item" data-btn="pl">
+                    <a
+                        href="/index.html"
+                        class="header-language__item"
+                        data-btn="pl"
+                    >
                         PL
-                    </button>
-                    <button class="header-language__item" data-btn="en">
+                    </a>
+                    <a href="/en/" class="header-language__item" data-btn="en">
                         EN
-                    </button>
-                    <button class="header-language__item" data-btn="ua">
+                    </a>
+                    <a href="/ua/" class="header-language__item" data-btn="ua">
                         UA
-                    </button>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -198,7 +202,7 @@
 
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_1.jpg"
+                        src="/images/slide_1.jpg"
                         alt="картинка"
                     />
                 </li>
@@ -227,7 +231,7 @@
 
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_3.jpg"
+                        src="/images/slide_3.jpg"
                         alt="картинка"
                     />
                 </li>
@@ -256,7 +260,7 @@
 
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_2.jpg"
+                        src="/images/slide_2.jpg"
                         alt="картинка"
                     />
                 </li>
@@ -299,7 +303,7 @@
                         </p>
                     </div>
                     <img
-                        src="images/about-us.png"
+                        src="/images/about-us.png"
                         class="about-us-block__img"
                         draggable="false"
                     />
@@ -391,12 +395,12 @@
         <section class="certificats sections">
             <div class="container">
                 <img
-                    src="images/cert2.png"
+                    src="/images/cert2.png"
                     alt="Сертифікат 1"
                     class="certificats__img active"
                 />
                 <img
-                    src="images/cert1.png"
+                    src="/images/cert1.png"
                     alt="Сертифікат 2"
                     class="certificats__img"
                 />
@@ -513,16 +517,16 @@
             </h2>
             <div class="container">
                 <div class="countries-list">
-                    <img src="images/pl.png" alt="ua" /><img
-                        src="images/ua.png"
+                    <img src="/images/pl.png" alt="ua" /><img
+                        src="/images/ua.png"
                         alt="pl"
-                    /><img src="images/br.png" alt="br" /><img
-                        src="images/eu.png"
+                    /><img src="/images/br.png" alt="br" /><img
+                        src="/images/eu.png"
                         alt="eu"
-                    /><img src="images/in.png" alt="in" /><img
-                        src="images/ml.png"
+                    /><img src="/images/in.png" alt="in" /><img
+                        src="/images/ml.png"
                         alt="ml"
-                    /><img src="images/ph.png" alt="ph" />
+                    /><img src="/images/ph.png" alt="ph" />
                 </div>
             </div>
         </section>
@@ -573,7 +577,7 @@
         >
             <div class="form-modal-inner modal__inner">
                 <img
-                    src="images/form-banner.png"
+                    src="/images/form-banner.png"
                     alt="Баннер"
                     class="form-modal-inner__img"
                 />
@@ -650,6 +654,6 @@
         </div>
     </body>
 
-    <script src="js/localization.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/js/localization.js"></script>
+    <script src="/js/script.js"></script>
 </html>
