--- a/en/index.html
+++ b/en/index.html
@@ -19,7 +19,7 @@
     <body>
         <header class="header" data-inert>
             <div class="header-container">
-                <a href="" class="header-logo">
+                <a href="#" class="header-logo">
                     <img
                         src="/images/shorticon.ico"
                         alt="logo"
@@ -72,27 +72,11 @@
                         </svg>
                     </button>
                     <div class="header-language__items">
-                        <a
-                            href="/index.html"
-                            class="header-language__item"
-                            data-btn="pl"
-                        >
+                        <a href="/index.html" class="header-language__item">
                             PL
                         </a>
-                        <a
-                            href="/en/"
-                            class="header-language__item"
-                            data-btn="en"
-                        >
-                            EN
-                        </a>
-                        <a
-                            href="/ua/"
-                            class="header-language__item"
-                            data-btn="ua"
-                        >
-                            UA
-                        </a>
+                        <a href="/en/" class="header-language__item"> EN </a>
+                        <a href="/ua/" class="header-language__item"> UA </a>
                     </div>
                 </div>
 
@@ -103,27 +87,9 @@
         </header>
 
         <nav class="navigation" data-inert>
-            <a
-                href="#about-us"
-                class="navigation__item"
-                data-lang="navigation-items__item-1"
-            >
-                Про нас
-            </a>
-            <a
-                href="#achievments"
-                class="navigation__item"
-                data-lang="navigation-items__item-2"
-            >
-                Чому ми?
-            </a>
-            <a
-                href="#our-services"
-                class="navigation__item"
-                data-lang="navigation-items__item-3"
-            >
-                Послуги
-            </a>
+            <a href="#about-us" class="navigation__item"> Про нас </a>
+            <a href="#achievments" class="navigation__item"> Чому ми? </a>
+            <a href="#our-services" class="navigation__item"> Послуги </a>
 
             <div class="header-language">
                 <button class="header-language__main">
@@ -138,19 +104,9 @@
                     </svg>
                 </button>
                 <div class="header-language__items">
-                    <a
-                        href="/index.html"
-                        class="header-language__item"
-                        data-btn="pl"
-                    >
-                        PL
-                    </a>
-                    <a href="/en/" class="header-language__item" data-btn="en">
-                        EN
-                    </a>
-                    <a href="/ua/" class="header-language__item" data-btn="ua">
-                        UA
-                    </a>
+                    <a href="/index.html" class="header-language__item"> PL </a>
+                    <a href="/en/" class="header-language__item"> EN </a>
+                    <a href="/ua/" class="header-language__item"> UA </a>
                 </div>
             </div>
         </nav>
@@ -654,6 +610,5 @@
         </div>
     </body>
 
-    <script src="/js/localization.js"></script>
     <script src="/js/script.js"></script>
 </html>
