--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <body>
         <header class="header" data-inert>
             <div class="header-container">
-                <a href="" class="header-logo">
+                <a href="#" class="header-logo">
                     <img
-                        src="images/shorticon.ico"
+                        src="/images/shorticon.ico"
                         alt="logo"
                         class="header-logo__image"
                     />
@@ -72,27 +72,11 @@
                         </svg>
                     </button>
                     <div class="header-language__items">
-                        <a
-                            href="index.html"
-                            class="header-language__item"
-                            data-btn="pl"
-                        >
+                        <a href="/index.html" class="header-language__item">
                             PL
                         </a>
-                        <a
-                            href="en/"
-                            class="header-language__item"
-                            data-btn="en"
-                        >
-                            EN
-                        </a>
-                        <a
-                            href="ua/"
-                            class="header-language__item"
-                            data-btn="ua"
-                        >
-                            UA
-                        </a>
+                        <a href="/en/" class="header-language__item"> EN </a>
+                        <a href="/ua/" class="header-language__item"> UA </a>
                     </div>
                 </div>
 
@@ -103,27 +87,9 @@
         </header>
 
         <nav class="navigation" data-inert>
-            <a
-                href="#about-us"
-                class="navigation__item"
-                data-lang="navigation-items__item-1"
-            >
-                Про нас
-            </a>
-            <a
-                href="#achievments"
-                class="navigation__item"
-                data-lang="navigation-items__item-2"
-            >
-                Чому ми?
-            </a>
-            <a
-                href="#our-services"
-                class="navigation__item"
-                data-lang="navigation-items__item-3"
-            >
-                Послуги
-            </a>
+            <a href="#about-us" class="navigation__item"> Про нас </a>
+            <a href="#achievments" class="navigation__item"> Чому ми? </a>
+            <a href="#our-services" class="navigation__item"> Послуги </a>
 
             <div class="header-language">
                 <button class="header-language__main">
@@ -138,15 +104,9 @@
                     </svg>
                 </button>
                 <div class="header-language__items">
-                    <button class="header-language__item" data-btn="pl">
-                        PL
-                    </button>
-                    <button class="header-language__item" data-btn="en">
-                        EN
-                    </button>
-                    <button class="header-language__item" data-btn="ua">
-                        UA
-                    </button>
+                    <a href="/index.html" class="header-language__item"> PL </a>
+                    <a href="/en/" class="header-language__item"> EN </a>
+                    <a href="/ua/" class="header-language__item"> UA </a>
                 </div>
             </div>
         </nav>
@@ -198,7 +158,7 @@
 
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_1.jpg"
+                        src="/images/slide_1.jpg"
                         alt="картинка"
                     />
                 </li>
@@ -227,7 +187,7 @@
 
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_3.jpg"
+                        src="/images/slide_3.jpg"
                         alt="картинка"
                     />
                 </li>
@@ -256,7 +216,7 @@
 
                     <img
                         class="hover-slider__item-img"
-                        src="images/slide_2.jpg"
+                        src="/images/slide_2.jpg"
                         alt="картинка"
                     />
                 </li>
@@ -299,7 +259,7 @@
                         </p>
                     </div>
                     <img
-                        src="images/about-us.png"
+                        src="/images/about-us.png"
                         class="about-us-block__img"
                         draggable="false"
                     />
@@ -391,12 +351,12 @@
         <section class="certificats sections">
             <div class="container">
                 <img
-                    src="images/cert2.png"
+                    src="/images/cert2.png"
                     alt="Сертифікат 1"
                     class="certificats__img active"
                 />
                 <img
-                    src="images/cert1.png"
+                    src="/images/cert1.png"
                     alt="Сертифікат 2"
                     class="certificats__img"
                 />
@@ -513,16 +473,16 @@
             </h2>
             <div class="container">
                 <div class="countries-list">
-                    <img src="images/pl.png" alt="ua" /><img
-                        src="images/ua.png"
+                    <img src="/images/pl.png" alt="ua" /><img
+                        src="/images/ua.png"
                         alt="pl"
-                    /><img src="images/br.png" alt="br" /><img
-                        src="images/eu.png"
+                    /><img src="/images/br.png" alt="br" /><img
+                        src="/images/eu.png"
                         alt="eu"
-                    /><img src="images/in.png" alt="in" /><img
-                        src="images/ml.png"
+                    /><img src="/images/in.png" alt="in" /><img
+                        src="/images/ml.png"
                         alt="ml"
-                    /><img src="images/ph.png" alt="ph" />
+                    /><img src="/images/ph.png" alt="ph" />
                 </div>
             </div>
         </section>
@@ -573,7 +533,7 @@
         >
             <div class="form-modal-inner modal__inner">
                 <img
-                    src="images/form-banner.png"
+                    src="/images/form-banner.png"
                     alt="Баннер"
                     class="form-modal-inner__img"
                 />
@@ -650,6 +610,5 @@
         </div>
     </body>
 
-    <script src="js/localization.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
 </html>
