--- a/ua/index.html
+++ b/ua/index.html
@@ -138,20 +138,13 @@
                     <div class="hover-slider__item-information">
                         <h1
                             class="hover-slider__item-information-h1 h1-size-text"
-                            data-lang="hover-slider__item-information-h1-1"
                         >
                             В ПОШУКАХ РОБОТИ?
                         </h1>
-                        <p
-                            class="hover-slider__item-information-p p-size-text"
-                            data-lang="hover-slider__item-information-p-1"
-                        >
+                        <p class="hover-slider__item-information-p p-size-text">
                             Працюємо в багатьох регіонах Польщі
                         </p>
-                        <button
-                            class="get-vacancy-button"
-                            data-lang="get-vacancy-button"
-                        >
+                        <button class="get-vacancy-button">
                             Отримати вакансії
                         </button>
                     </div>
@@ -166,21 +159,14 @@
                     <div class="hover-slider__item-information">
                         <h1
                             class="hover-slider__item-information-h1 h1-size-text"
-                            data-lang="hover-slider__item-information-h1-2"
                         >
                             В ПОШУКАХ ПРАЦІВНИКІВ?
                         </h1>
-                        <p
-                            class="hover-slider__item-information-p p-size-text"
-                            data-lang="hover-slider__item-information-p-2"
-                        >
+                        <p class="hover-slider__item-information-p p-size-text">
                             Найпоширеніші вакансії: зварювальник, монтер,
                             слюсар, маляр
                         </p>
-                        <button
-                            class="get-vacancy-button"
-                            data-lang="get-vacancy-button"
-                        >
+                        <button class="get-vacancy-button">
                             Отримати вакансії
                         </button>
                     </div>
@@ -195,21 +181,14 @@
                     <div class="hover-slider__item-information">
                         <h1
                             class="hover-slider__item-information-h1 h1-size-text"
-                            data-lang="hover-slider__item-information-h1-3"
                         >
                             ОФІЦІЙНЕ ПРАЦЕВЛАШТУВАННЯ
                         </h1>
-                        <p
-                            class="hover-slider__item-information-p p-size-text"
-                            data-lang="hover-slider__item-information-p-3"
-                        >
+                        <p class="hover-slider__item-information-p p-size-text">
                             Швидке і якісне оформлення документів для легального
                             перебування і праці на території Польщі
                         </p>
-                        <button
-                            class="get-vacancy-button"
-                            data-lang="get-vacancy-button"
-                        >
+                        <button class="get-vacancy-button">
                             Отримати вакансії
                         </button>
                     </div>
@@ -233,16 +212,10 @@
             <div class="container">
                 <div class="about-us-block">
                     <div class="about-us-block__info">
-                        <h2
-                            class="about-us-block__info-h2 h2-size-text"
-                            data-lang="about-us-block__info-h2"
-                        >
+                        <h2 class="about-us-block__info-h2 h2-size-text">
                             Про нас
                         </h2>
-                        <p
-                            class="about-us-block__info-p p-size-text"
-                            data-lang="about-us-block__info-p"
-                        >
+                        <p class="about-us-block__info-p p-size-text">
                             Фірма працює з 2021 по всій території Польщі,
                             займаємося працевлаштуванням людей з таких країн як
                             Україна, Білорусь, Індонезія, Молдова, Індія,
@@ -269,12 +242,7 @@
 
         <section class="achievments sections" id="achievments" data-inert>
             <div class="container">
-                <h2
-                    class="achievments__h2 h2-size-text"
-                    data-lang="achievments__h2"
-                >
-                    Наші досягнення
-                </h2>
+                <h2 class="achievments__h2 h2-size-text">Наші досягнення</h2>
                 <ul class="achievments-list">
                     <li class="achievments-list__item">
                         <svg
@@ -285,10 +253,7 @@
                                 d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                             />
                         </svg>
-                        <p
-                            class="achievments-list__item-text p-size-text"
-                            data-lang="achievments-list__item-text-1"
-                        >
+                        <p class="achievments-list__item-text p-size-text">
                             На протязі часу роботи фірми ми працевлаштували
                             понад 1000 осіб
                         </p>
@@ -302,10 +267,7 @@
                                 d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                             />
                         </svg>
-                        <p
-                            class="achievments-list__item-text p-size-text"
-                            data-lang="achievments-list__item-text-2"
-                        >
+                        <p class="achievments-list__item-text p-size-text">
                             Швидке і якісне оформлення документів для легального
                             перебування і праці на території Польщі
                         </p>
@@ -319,10 +281,7 @@
                                 d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                             />
                         </svg>
-                        <p
-                            class="achievments-list__item-text p-size-text"
-                            data-lang="achievments-list__item-text-3"
-                        >
+                        <p class="achievments-list__item-text p-size-text">
                             Говоримо на українській,польській, англійській,
                             російській мовах
                         </p>
@@ -336,10 +295,7 @@
                                 d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                             />
                         </svg>
-                        <p
-                            class="achievments-list__item-text p-size-text"
-                            data-lang="achievments-list__item-text-4"
-                        >
+                        <p class="achievments-list__item-text p-size-text">
                             Своєчасні виплати заробітної плати та повний пакет
                             медичного страхування
                         </p>
@@ -387,45 +343,21 @@
 
         <section class="our-services sections" id="our-services" data-inert>
             <div class="container">
-                <h2
-                    class="our-services__h2 h2-size-text"
-                    data-lang="our-services__h2"
-                >
-                    Наші послуги
-                </h2>
+                <h2 class="our-services__h2 h2-size-text">Наші послуги</h2>
                 <ul class="our-services-cards">
                     <li class="our-services-cards__item">
-                        <h4
-                            class="our-services-cards__item-h4"
-                            data-lang="our-services-cards__item-h4-1"
-                        >
-                            Легалізація
-                        </h4>
-                        <p
-                            class="our-services-cards__item-p p-size-text"
-                            data-lang="our-services-cards__item-p-1"
-                        >
+                        <h4 class="our-services-cards__item-h4">Легалізація</h4>
+                        <p class="our-services-cards__item-p p-size-text">
                             Ми надаємо всі необхідні документи, пов'язані з
                             перебуванням і легальною роботою в Польщі
                         </p>
-                        <button
-                            class="our-services-cards__item-button"
-                            data-lang="our-services-cards__item-button"
-                        >
+                        <button class="our-services-cards__item-button">
                             Детальніше
                         </button>
                     </li>
                     <li class="our-services-cards__item">
-                        <h4
-                            class="our-services-cards__item-h4"
-                            data-lang="our-services-cards__item-h4-2"
-                        >
-                            Рекрутація
-                        </h4>
-                        <p
-                            class="our-services-cards__item-p p-size-text"
-                            data-lang="our-services-cards__item-p-2"
-                        >
+                        <h4 class="our-services-cards__item-h4">Рекрутація</h4>
+                        <p class="our-services-cards__item-p p-size-text">
                             Робота в Польщі для іноземців. Якщо ви зацікавлені
                             легальною працею в Польщі, пропонуємо вам зв'язатися
                             з нами. Процес рекрутингу передбачає поряд із
@@ -433,33 +365,21 @@
                             додаткової інформації про кандидатів, підписання
                             контракту й адаптацію нових працівників
                         </p>
-                        <button
-                            class="our-services-cards__item-button"
-                            data-lang="our-services-cards__item-button"
-                        >
+                        <button class="our-services-cards__item-button">
                             Детальніше
                         </button>
                     </li>
                     <li class="our-services-cards__item">
-                        <h4
-                            class="our-services-cards__item-h4"
-                            data-lang="our-services-cards__item-h4-3"
-                        >
+                        <h4 class="our-services-cards__item-h4">
                             Кваліфікована підготовка спеціалістів до роботи
                         </h4>
-                        <p
-                            class="our-services-cards__item-p p-size-text"
-                            data-lang="our-services-cards__item-p-3"
-                        >
+                        <p class="our-services-cards__item-p p-size-text">
                             Якщо у Вас не має досвіду в зварювальних роботах -
                             це не проблема. Запишіться до нас на навчання
                             зварювальника, швидко і якісно опануєте нову
                             спеціальність
                         </p>
-                        <button
-                            class="our-services-cards__item-button"
-                            data-lang="our-services-cards__item-button"
-                        >
+                        <button class="our-services-cards__item-button">
                             Детальніше
                         </button>
                     </li>
@@ -468,9 +388,7 @@
         </section>
 
         <section class="countries sections" data-inert>
-            <h2 class="countries__h2 h2-size-text" data-lang="countries__h2">
-                Країни-партнери
-            </h2>
+            <h2 class="countries__h2 h2-size-text">Країни-партнери</h2>
             <div class="container">
                 <div class="countries-list">
                     <img src="/images/pl.png" alt="ua" /><img
@@ -490,13 +408,10 @@
         <section class="forma" data-inert>
             <span class="forma__overlay"></span>
             <div class="forma-info">
-                <h1
-                    class="forma-info__h1 h1-size-text"
-                    data-lang="forma-info__h1"
-                >
+                <h1 class="forma-info__h1 h1-size-text">
                     Отримуйте найактуальніші вакансії!
                 </h1>
-                <p class="forma-info__p p-size-text" data-lang="forma-info__p">
+                <p class="forma-info__p p-size-text">
                     Заповніть форму і ми одразу з Вами зв'яжемося!
                 </p>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
@@ -504,12 +419,7 @@
                         d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                     />
                 </svg>
-                <button
-                    class="get-vacancy-button"
-                    data-lang="get-vacancy-button"
-                >
-                    Отримати вакансії!
-                </button>
+                <button class="get-vacancy-button">Отримати вакансії!</button>
             </div>
         </section>
 
@@ -538,52 +448,40 @@
                     class="form-modal-inner__img"
                 />
                 <div class="form-modal-inner-info">
-                    <h4
-                        class="form-modal-inner-info__h4"
-                        data-lang="form-modal-inner-info__h4"
-                    >
-                        Bądźmy w kontakcie!
+                    <h4 class="form-modal-inner-info__h4">
+                        Давайте будемо на зв'язку!
                     </h4>
-                    <p
-                        class="form-modal-inner-info__p"
-                        data-lang="form-modal-inner-info__p"
-                    >
-                        Wypełnij poniższy formularz, a my skontaktujemy się z
-                        Tobą!
+                    <p class="form-modal-inner-info__p">
+                        Заповніть форму нижче і ми з Вами зв'яжемося!
                     </p>
                     <form class="form-modal-inner-form" action="">
                         <input
                             id="input-name"
                             class="form-modal-inner-form__input"
-                            placeholder="Twoje imię"
+                            placeholder="Ваше ім'я"
                             type="text"
-                            data-lang="form-modal-inner-form__input-1"
                         />
                         <span
                             class="form-modal-inner-form__correctly-input-name"
-                            data-lang="form-modal-inner-form__correctly-input-empty"
                         ></span>
                         <input
                             id="input-phone"
                             class="form-modal-inner-form__input"
-                            placeholder="Twój numer telefonu"
+                            placeholder="Ваш номер телефону"
                             type="tel"
                             name="telefon"
                             id="telF"
-                            data-lang="form-modal-inner-form__input-2"
                         />
                         <span
                             class="form-modal-inner-form__correctly-input-phone"
-                            data-lang="form-modal-inner-form__correctly-input-empty"
                         ></span>
                         <button
                             class="form-modal-inner-form__submit-button"
                             type="submit"
                         >
                             <span
-                                data-lang="form-modal-inner-form__submit-button"
                                 class="form-modal-inner-form__submit-button-text"
-                                >Wysłać</span
+                                >Відправити</span
                             >
                             <span
                                 class="form-modal-inner-form__submit-button-loader"
@@ -592,7 +490,7 @@
                     </form>
 
                     <div class="form-modal-inner-info__successfully">
-                        Dziękuję! Dane przesłane pomyślnie.
+                        Дякую! Дані успішно надіслані.
                     </div>
                 </div>
             </div>
